--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,10 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/about">Quen somos?</a>
+            <a href="{{ site.baseurl }}/doc">Documentación</a>
+      
+ 
           </nav>
         </header>
       </div>
