--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,10 @@ layout: default
   </div>
 
   <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
+    Written on {{ page.date | date: "%B %e, %Y" }} -  {{  site.tags.TAG }} 
+   
+
+
   </div>
 
   {% include disqus.html %}
